Removed PMDs and JCSC violations
SVN-Revision: 24048